--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 									<a class="image fit"><img src="images/braindead004_806.png" alt="" /></a>
                                     
                                     <p>Player character and gameplay including input, player control, animator setup, weapons, and projectile system.</p>
-                                    <video width="480" height="360" controls>
+                                    <video class="image fit" controls>
                                         <source src="videos/braindead_004_male_assault_rifle.mp4" type="video/mp4">
                                     </video>
                                     <p>This twin stick shooter built in Unity gives the player a choice between a female or male player character. All attacks use the projectile system. Melee projectiles have a speed of 0 and only exist for one frame. Projectiles are triggers that hit colliders and activate depending on projectile data and collider layers.</p>
                                     <p>Weapons include fist, pistol, assault rifle, shotgun, serum gun, and alarm clock. The serum gun fires a special projectile that heals injured humans or damages zombies. The alarm clock emits a sound that attracts zombies into a cluster.</p>
                                     
                                     <a class="image fit"><img src="images/braindead014_1699.png" alt="" /></a>
-                                    <video width="480" height="360" controls>
+                                    <video class="image fit" controls>
                                         <source src="videos/braindead_022_female_weapon_sample.mp4" type="video/mp4">
                                     </video>
 								</article>
@@ -86,7 +86,7 @@
 									</header>
                                     <a class="image fit"><img src="images/Arduino_Robot.jpg" alt="" /></a>
 									<p>This Arduino differential drive robot uses parallel-mounted ultrasonic sensors to face an object at the surface normal and a proportional-derivative (PD) controller to minimize overshoot and oscillation. </p>
-                                    <video width="480" height="360" controls>
+                                    <video class="image fit" controls>
                                         <source src="videos/Sonarbot_PD.mp4" type="video/mp4">
                                     </video>
 								</article>
